made three changes: added a filed for manual input of project ID, added support for pagination (in case the project has more than 100 experiments), added support for experiments targeted to pages instead of URL

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <div class="container">
             <h2>Running Experiments</h2>
             <form>
+                <label for="projectId">Project ID</label><br />
+                <input type="text" id="projectId" name="projectId" /><br />
                 <label for="fname">API Key:</label><br />
                 <input type="text" id="apiKey" name="apikey" /><br />
                 <h3 id="submit">Submit API Key</h3>
